--- a/src/main/webapp/WEB-INF/templates/views/races.jade
+++ b/src/main/webapp/WEB-INF/templates/views/races.jade
@@ -2,10 +2,10 @@
 - attributes("titleName") = "Races"
 -@ val raceIds: List[String]
 
+img(src='../../../images/chicago_f1_logo.jpg' height='200px')
 p These are the races
 ul
 - for(id <- raceIds) {
   li
     a(href='races/#{id}')= id
 - }
-
