--- a/src/main/webapp/WEB-INF/templates/views/race.jade
+++ b/src/main/webapp/WEB-INF/templates/views/race.jade
@@ -6,7 +6,7 @@
 html
   head
     title Datatables Page
-    script(type='text/javascript' src='../../../js/jquery.js')
+    script(type='text/javascript' src='../../../js/jquery-1.10.2.min.js')
     script(type='text/javascript' src='../../../js/jquery.dataTables.min.js')
     link(rel='stylesheet' href='../../../css/demo_table.css')
     link(rel='stylesheet' href='../../../css/all.css')
