Initial CSS work.

--- a/src/main/webapp/WEB-INF/templates/views/races.jade
+++ b/src/main/webapp/WEB-INF/templates/views/races.jade
@@ -1,11 +1,13 @@
 - attributes("title") = "List of Races"
 - attributes("titleName") = "Races"
+- attributes("headline") = "Races"
 -@ val raceIds: List[String]
 
-img(src='../../../images/chicago_f1_logo.jpg' height='200px')
 p These are the races
 ul
-- for(id <- raceIds) {
+  - for(id <- raceIds) {
   li
-    a(href='races/#{id}')= id
-- }
+    .race
+      a(href='races/#{id}')= id
+      .winner
+  - }
