--- a/src/main/webapp/WEB-INF/templates/layouts/default.jade
+++ b/src/main/webapp/WEB-INF/templates/layouts/default.jade
@@ -6,7 +6,20 @@
 html
   head
     title= title
+    script(type='text/javascript' src='../../../js/jquery-1.10.2.min.js')
+    script(type='text/javascript' src='../../../js/jquery.dataTables.min.js')
+    link(rel='stylesheet' href='../../../css/demo_table.css')
+    link(rel='stylesheet' href='../../../css/all.css')
   body
     #content
+      nav
+        ul(id="menu")
+          li
+            a(href="/") Home
+          li
+            a(href="/editions") Editions
+          li
+            a(href="/races") Races
+          .clear
       h1= headline
       != body
