--- a/src/main/webapp/WEB-INF/templates/views/race.jade
+++ b/src/main/webapp/WEB-INF/templates/views/race.jade
@@ -2,31 +2,24 @@
 - attributes("title") = s"Race ${race.raceId}"
 - attributes("titleName") = "Races"
 
-!!!
-html
-  head
-    title Datatables Page
-    script(type='text/javascript' src='../../../js/jquery-1.10.2.min.js')
-    script(type='text/javascript' src='../../../js/jquery.dataTables.min.js')
-    link(rel='stylesheet' href='../../../css/demo_table.css')
-    link(rel='stylesheet' href='../../../css/all.css')
-  body
-    #content
-      table(id='example' class='standardTable')
-        thead
-          tr
-            th Racer
-            th Position
-            th Kart #
-            th Time
-        tbody
+#content
+  table(id='example' class='standardTable')
+    thead
+      tr
+        th Racer
+        th Position
+        th Kart #
+        th Time
+      tbody
   :!javascript
     $(document).ready(function() {
       $('#example').dataTable( {
     	"bProcessing": true,
-        "sAjaxSource": '/data/races/#{race.raceId}'
+        "sAjaxSource": '/data/races/#{race.raceId}',
+        "bPaginate": false,
+        "bInfo": false,
+        "aoColumnDefs": [
+          { "sClass": "center", "aTargets": [1, 2, 3] }
+        ]
       });
     });
-
-
-
