Default sorting by position.

--- a/src/main/webapp/WEB-INF/templates/views/race.jade
+++ b/src/main/webapp/WEB-INF/templates/views/race.jade
@@ -17,6 +17,7 @@
     	"bProcessing": true,
         "sAjaxSource": '/data/races/#{race.raceId}',
         "bPaginate": false,
+        "aaSorting": [[ 1, "asc" ]],
         "bInfo": false,
         "aoColumnDefs": [
           { "sClass": "center", "aTargets": [1, 2, 3] }
