--- a/src/main/webapp/css/all.css
+++ b/src/main/webapp/css/all.css
@@ -19,7 +19,9 @@ th {
 }
 
 h1 {
+    padding-left: 10px;
     color: #aa0000;
+    text-transform: uppercase;
 }
 
 .standardTable {
@@ -33,6 +35,7 @@ ul {
 }
 
 #menu li {
+    text-transform: uppercase;
     padding: 0 20px;
 }
 
@@ -45,8 +48,12 @@ ul li {
 ul.editions li {
     width: 500px;
     margin: 4px;
-    background: #111;
-    border: solid 1px #111;
+    background: #202020;
+    border: solid 1px #333;
+}
+
+ul.editions h3 {
+    color: #EBC000;
 }
 
 li .printId {
@@ -54,16 +61,7 @@ li .printId {
     height: 100px;
     width: 150px;
     float:left;
-    background: #5a1111;
-    text-align: center;
-}
-
-li .printId {
-    padding: 55px 10px 10px 10px;
-    height: 100px;
-    width: 150px;
-    float:left;
-    background: #5a1111;
+    background: #880000;
     text-align: center;
 }
 
@@ -77,8 +75,6 @@ li .printId:hover {
     width: 150px;
     font-size: 30px;
 }
-
-
 
 .detail {
     padding-top: 5px;
