--- a/src/main/webapp/WEB-INF/templates/views/editions.jade
+++ b/src/main/webapp/WEB-INF/templates/views/editions.jade
@@ -8,7 +8,7 @@ ul(class='editions')
   li
     .edition
       .printId
-        a= e.printId
+        a(href='editions/#{e.date}')= e.printId
       .detail
         h3= e.winner
         p= e.results(0).formattedTime
