--- a/src/main/webapp/WEB-INF/templates/views/races.jade
+++ b/src/main/webapp/WEB-INF/templates/views/races.jade
@@ -3,8 +3,7 @@
 - attributes("headline") = "Races"
 -@ val raceIds: List[String]
 
-p These are the races
-ul
+ul(class='list-unstyled')
   - for(id <- raceIds) {
   li
     .race
