--- a/src/main/webapp/WEB-INF/templates/layouts/default.jade
+++ b/src/main/webapp/WEB-INF/templates/layouts/default.jade
@@ -8,18 +8,22 @@ html
     title= title
     script(type='text/javascript' src='../../../js/jquery-1.10.2.min.js')
     script(type='text/javascript' src='../../../js/jquery.dataTables.min.js')
+    script(type='text/javascript' src='../../../js/bootstrap.js')
     link(rel='stylesheet' href='../../../css/demo_table.css')
     link(rel='stylesheet' href='../../../css/all.css')
+    link(rel='stylesheet' href='../../../css/bootstrap.css')
   body
-    #content
-      nav
-        ul(id="menu")
-          li
-            a(href="/") Home
-          li
-            a(href="/editions") Editions
-          li
-            a(href="/races") Races
-          .clear
+    #nav.navbar.navbar-inverse
+      .container
+        .collapse.navbar-collapse
+          ul(id="menu" class="nav navbar-nav")
+            li
+              a(href="/") Home
+            li
+              a(href="/editions") Editions
+            li
+              a(href="/races") Races
+          /.clear
+    .container
       h1= headline
       != body
