--- a/src/main/webapp/WEB-INF/templates/layouts/default.jade
+++ b/src/main/webapp/WEB-INF/templates/layouts/default.jade
@@ -20,6 +20,8 @@ html
             li
               a(href="/") Home
             li
+              a(href="/standings") Standings
+            li
               a(href="/editions") Editions
             li
               a(href="/races") Races
