Improve index page.

--- a/src/main/webapp/WEB-INF/templates/views/edition.jade
+++ b/src/main/webapp/WEB-INF/templates/views/edition.jade
@@ -3,5 +3,6 @@
 - attributes("titleName") = s"Edition ${edition.printId}"
 - attributes("source") = "/data/editions/" + edition.date
 
+h1= s"Edition ${edition.printId}"
 #content
 - render("racer-results.jade")
