--- a/src/main/webapp/WEB-INF/templates/views/editions.jade
+++ b/src/main/webapp/WEB-INF/templates/views/editions.jade
@@ -1,8 +1,8 @@
 - attributes("title") = "List of Editions"
-- attributes("titleName") = "Editions"
 - attributes("headline") = "Editions"
 -@ val editions: List[com.chicagof1.model.Edition]
 
+h1 Editions
 ul(class='editions list-unstyled')
   - for(e <- editions) {
   li
