--- a/src/main/webapp/WEB-INF/templates/views/races.jade
+++ b/src/main/webapp/WEB-INF/templates/views/races.jade
@@ -3,6 +3,7 @@
 - attributes("headline") = "Races"
 -@ val raceIds: List[String]
 
+h1 Races
 ul(class='list-unstyled')
   - for(id <- raceIds) {
   li
