--- a/src/main/webapp/WEB-INF/templates/views/race.jade
+++ b/src/main/webapp/WEB-INF/templates/views/race.jade
@@ -3,5 +3,6 @@
 - attributes("titleName") = "Races"
 - attributes("source") = "/data/races/" + race.raceId
 
+h1= s"Race ${race.raceId}"
 #content
 - render("racer-results.jade")
