--- a/src/main/webapp/WEB-INF/templates/layouts/default.jade
+++ b/src/main/webapp/WEB-INF/templates/layouts/default.jade
@@ -8,6 +8,7 @@ html
     script(type='text/javascript' src='../../../js/jquery-1.10.2.min.js')
     script(type='text/javascript' src='../../../js/jquery.dataTables.min.js')
     script(type='text/javascript' src='../../../js/bootstrap.js')
+    script(src='../../../js/jquery.fitvids.js')
     link(rel='stylesheet' href='../../../css/demo_table.css')
     link(rel='stylesheet' href='../../../css/all.css')
     link(rel='stylesheet' href='../../../css/bootstrap.css')
@@ -22,6 +23,8 @@ html
               a(href="/standings") Standings
             li
               a(href="/editions") Editions
+            li
+              a(href="/videos") Videos
             li
               a(href="/races") Races
           /.clear
