Minor color changes.

--- a/src/main/webapp/css/all.css
+++ b/src/main/webapp/css/all.css
@@ -185,11 +185,11 @@ a:active {
 }
 
 #standingsTable .first {
-    background-color: #FFFFBF;
+    background-color: #FFF7BC;
 }
 
 #standingsTable .second {
-    background-color: #DFDFDF;
+    background-color: #EAEAEA;
 }
 
 #standingsTable .third {
