Add page to show stack traces.

--- a/src/main/webapp/WEB-INF/templates/views/edition.jade
+++ b/src/main/webapp/WEB-INF/templates/views/edition.jade
@@ -9,7 +9,7 @@ h1= s"Edition ${edition.printId}"
 - render("racer-results.jade")
 
 h2 Individual Races
-ul(class='list-unstyled')
+ul(class='list-unstyled floating')
   - for(r <- editionWithRaces.races) {
     li
       .race
