--- a/src/main/webapp/WEB-INF/templates/views/editions.jade
+++ b/src/main/webapp/WEB-INF/templates/views/editions.jade
@@ -3,7 +3,7 @@
 -@ val editionsWithRaces: List[com.chicagof1.model.EditionWithRaces]
 
 h1 Editions
-ul(class='editions list-unstyled')
+ul(class='editions list-unstyled floating')
   - for(er <- editionsWithRaces) {
   -   val e = er.edition
   li
