--- a/src/main/webapp/WEB-INF/templates/layouts/default.jade
+++ b/src/main/webapp/WEB-INF/templates/layouts/default.jade
@@ -5,12 +5,12 @@
 html
   head
     title= title
-    script(type='text/javascript' src='../../../js/jquery-1.10.2.min.js')
-    script(type='text/javascript' src='../../../js/jquery.dataTables.min.js')
-    script(type='text/javascript' src='../../../js/bootstrap.js')
-    link(rel='stylesheet' href='../../../css/demo_table.css')
-    link(rel='stylesheet' href='../../../css/all.css')
-    link(rel='stylesheet' href='../../../css/bootstrap.css')
+    script(type='text/javascript' src='/js/jquery-1.10.2.min.js')
+    script(type='text/javascript' src='/js/jquery.dataTables.min.js')
+    script(type='text/javascript' src='/js/bootstrap.js')
+    link(rel='stylesheet' href='/css/demo_table.css')
+    link(rel='stylesheet' href='/css/all.css')
+    link(rel='stylesheet' href='/css/bootstrap.css')
   body
     #nav.navbar.navbar-inverse
       .container
@@ -25,5 +25,5 @@ html
             li
               a(href="/videos") Videos
           /.clear
-    .container
+    .container.jumbo
       != body
