--- a/src/main/webapp/css/all.css
+++ b/src/main/webapp/css/all.css
@@ -1,5 +1,18 @@
+body {
+    background: url(http://wallpaperpanda.com/wallpapers/Gi9/dbK/Gi9dbKkdT.jpg);
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    color: #344644;
+}
+
 .standardTable {
     width: 100%;
+    background-color: white;
+}
+
+ul.editions {
+    display:table !important;
+    margin: 0 auto !important;
 }
 
 ul.floating li {
@@ -8,40 +21,56 @@ ul.floating li {
 }
 
 ul.editions li {
-    width: 500px;
     margin: 1px;
     background: #eee;
     border: solid 1px #ccc;
 }
 
 .editions h3 {
-    margin-top: 13px;
+    width: 100%;
 }
 
-li .printId {
-    height: 120px;
-    width: 150px;
+.editions .editionData {
+    padding: 10px;
+}
+
+.editions .editionId {
+    margin-top: 0px !important;
+    margin-bottom: 0px !important;
+    text-align: right;
+    font-weight: 400 !important;
+}
+
+.editions .winner {
+    margin-top: 40px !important;
+    margin-bottom: 0px !important;
+    font-weight: 100 !important;
+    text-align: left;
+}
+
+.editions .time {
+    margin-top: 5px;
+    margin-bottom: 0px;
+    text-align: left;
+    font-size: 15px;
+    font-weight: 100 !important;
+}
+
+.editionDiv {
     float:left;
     color: #ddd;
-    background: #9a1111;
+    background: #B51411;
     text-align: center;
 }
 
-.printId a {
-    padding: 35px 10px 10px 10px;
+.editionDiv a {
+    //padding: 35px 10px 10px 10px;
     display: block;
     color: #eee;
-    height: 120px;
-    width: 150px;
+    //height: 120px;
+    min-width: 250px;
     font-size: 28px;
-}
-
-.detail {
-    //padding-top: 5px;
-    padding-left: 15px;
-    height: 100%;
-    float: left;
-    vertical-align: middle;
+    font-weight: 100 !important;
 }
 
 li a {
@@ -51,7 +80,7 @@ li a {
 }
 
 li:hover {
-  background: #990000;
+  background: #94100E;
   cursor: pointer;
 }
 
@@ -63,8 +92,12 @@ li:hover {
     clear:both;
 }
 
-#example_filter {
+#racerResultsTable_filter {
     margin-bottom: 50px;
+}
+
+#racerResultsTable {
+    background-color: white;
 }
 
 li .race {
@@ -75,7 +108,7 @@ li .race a {
 }
 
 a:hover {
-    background: #bb1111;
+    background: #94100E;
     color: #eee !important;
     text-decoration:none !important;
 }
@@ -86,7 +119,7 @@ a:visited {
 }
 
 a:active {
-    //color: #eee !important;
+    color: #eee !important;
     text-decoration:none !important;
 }
 
@@ -94,8 +127,13 @@ a:active {
     margin-bottom: 0;
 }
 
-#standings {
-    margin: 0 auto;
+.activefacet {
+    font-weight: bold;
+    color: eee;
+}
+
+.facetitem:hover {
+    color: #cc3322;
 }
 
 .jumbo {
@@ -124,16 +162,25 @@ a:active {
     //font-size: 14px;
 }
 
-.videoDiv {
-    background-color: #ddd;
-    padding: 3px 0px 3px 3px !important;
-    margin: 5px 5px 0px 5px;
+.videoDiv.row {
+    background-color: rgba(10, 10, 10, 0.8);
+    padding: 0px !important;
+    margin: 0 0px 5px 0px;
+    color: white;
 }
 
 .video {
     background-color: #ddd;
     padding: 0px !important;
     margin: 0px;
+}
+
+#facets {
+    background: rgba(10, 10, 10, 0.8);
+    padding: 0px 10px;
+    color: #fff;
+    margin-bottom: 5px;
+    font-weight: 100 !important;
 }
 
 .facetsearch {
@@ -171,6 +218,10 @@ a:active {
     display: inline-block;
 }
 
+#standingsTable {
+//    color: #fff;
+}
+
 #standingsTable .edition {
     text-align: center;
     text-transform: uppercase;
@@ -182,24 +233,92 @@ a:active {
 
 #standingsTable .points {
     text-align: center;
+    font-weight: 400 !important;
 }
 
 #standingsTable .first {
-    background-color: #FFF7BC;
+    background-color: #FFec88 !important;
 }
 
 #standingsTable .second {
-    background-color: #EAEAEA;
+    background-color: #ccc !important;
 }
 
 #standingsTable .third {
-    background-color: #FFDF9F;
+    background-color: #FFDF9F !important;
 }
 
-.activefacet {
-    font-weight: bold;
-}
-
-.racerHeader {
+#standingsTable .racerHeader {
     min-width: 200px;
+}
+
+#standingsTable th, #racerResultsTable th {
+    background-color: #B51411;
+    color: white;
+    font-weight: 400 !important;
+    font-size: 14px;
+    text-align: center;
+}
+
+#standingsTable {
+    background-color: white;
+    //font-size: 30px !important;
+}
+
+h1, h2, h3, h4, h5, h6 {
+    font-family: 'Open Sans',sans-serif !important;
+    font-weight: 300 !important;
+}
+
+.number {
+    font-weight: 400 !important;
+}
+
+.videoDetailKey {
+    margin-top: 0px;
+    margin-bottom: 0px;
+}
+
+.videoDetailValue {
+    margin-top: 0px;
+    margin-bottom: 5px;
+    font-weight: 400 !important;
+    font-size: 20px;
+}
+
+body {
+    font-family: 'Open Sans',sans-serif !important;
+    font-weight: 400 !important;
+    font-size: 16px !important;
+}
+
+.fb-like-box {
+    background-color: white;
+}
+
+.container.jumbo {
+    padding: 0px 5px 10px 5px;
+    background: rgba(200, 200, 200, 0.8);
+    min-height: 1000px;
+}
+
+h1, h2, h3 {
+    margin-bottom: 10px !important;
+    margin-top: 10px !important;
+}
+
+.wrapFbComments {
+    background-color: rgba(250, 250, 250, 1) !important;
+}
+
+h1.pageTitle {
+    color: #610305;
+}
+
+.table-striped > tbody > tr:nth-child(2n) > td, .table-striped > tbody > tr:nth-child(2n) > th {
+    background-color:  rgba(240, 240, 240, 0.6) !important;
+}
+
+.table-striped > tbody > tr:nth-child(2n+1) > td, .table-striped > tbody > tr:nth-child(2n+1) > th {
+    background-color: rgba(220, 220, 220, 0.6) !important;
 }
