Add background image to project.

--- a/src/main/webapp/css/all.css
+++ b/src/main/webapp/css/all.css
@@ -1,5 +1,5 @@
 body {
-    background: url(http://wallpaperpanda.com/wallpapers/Gi9/dbK/Gi9dbKkdT.jpg);
+    background: url(/images/background.jpg);
     background-repeat: no-repeat;
     background-attachment: fixed;
     color: #344644;
