Add background color which the background image fades into when the window is ridiculously tall.

--- a/src/main/webapp/css/all.css
+++ b/src/main/webapp/css/all.css
@@ -1,6 +1,7 @@
 body {
     background: url(/images/background.jpg);
     background-repeat: no-repeat;
+    background-color: #171518 !important;
     background-attachment: fixed;
     color: #344644;
 }
