Small styling improvements.

--- a/src/main/webapp/WEB-INF/templates/views/racer-results.jade
+++ b/src/main/webapp/WEB-INF/templates/views/racer-results.jade
@@ -18,7 +18,8 @@ table(id='racerResultsTable' class='table table-hover table-striped')
         "aaSorting": [[ 1, "asc" ]],
         "bInfo": false,
         "aoColumnDefs": [
-          { "sClass": "center", "aTargets": [1, 2, 3] }
+          { "sClass": "center", "aTargets": [1, 2, 3] },
+          { "sClass": "racer", "aTargets": [0] }
         ]
       });
     });
