Dynamic resizing of editions.

--- a/src/main/webapp/WEB-INF/templates/views/editions.jade
+++ b/src/main/webapp/WEB-INF/templates/views/editions.jade
@@ -16,3 +16,5 @@ ul(class='editions list-unstyled floating')
   - }
 
 - render("analytics.ssp")
+
+script(type='text/javascript' src='/js/editionResize.js')
