--- a/src/main/webapp/WEB-INF/templates/layouts/default.jade
+++ b/src/main/webapp/WEB-INF/templates/layouts/default.jade
@@ -11,6 +11,7 @@ html
     link(rel='stylesheet' href='/css/demo_table.css')
     link(rel='stylesheet' href='/css/all.css')
     link(rel='stylesheet' href='/css/bootstrap.css')
+    link(rel='stylesheet' href='/css/flags.css')
     link(rel='stylesheet' href='http://fonts.googleapis.com/css?family=Open+Sans:100,300,400,600,700'  type='text/css')
 
   body
