Move events to its own page and improve history text.

--- a/src/main/webapp/WEB-INF/templates/layouts/default.jade
+++ b/src/main/webapp/WEB-INF/templates/layouts/default.jade
@@ -13,7 +13,6 @@ html
     link(rel='stylesheet' href='/css/bootstrap.css')
     link(rel='stylesheet' href='/css/flags.css')
     link(rel='stylesheet' href='http://fonts.googleapis.com/css?family=Open+Sans:100,300,400,600,700'  type='text/css')
-
   body
     #nav.navbar.navbar-inverse
       .container
@@ -21,6 +20,8 @@ html
           ul(id="menu" class="nav navbar-nav")
             li
               a(href="/") Home
+            li
+              a(href="/events") Events
             li
               a(href="/standings") Standings
             li
