--- a/src/main/webapp/WEB-INF/templates/views/events.jade
+++ b/src/main/webapp/WEB-INF/templates/views/events.jade
@@ -1,5 +1,10 @@
+- attributes("title") = "Events"
+- attributes("headline") = "Events"
+
+h1.pageTitle Events
+
 #eventsTable
-  table(id='events' class='table table-striped table-bordered table-hover')
+  table(id='events' class='table table-striped table-bordered table-hover standardTable')
     thead
       tr
         th Column 1
