--- a/src/main/webapp/WEB-INF/templates/layouts/default.jade
+++ b/src/main/webapp/WEB-INF/templates/layouts/default.jade
@@ -5,14 +5,18 @@
 html
   head
     title= title
-    script(type='text/javascript' src='/js/jquery-1.10.2.min.js')
-    script(type='text/javascript' src='/js/jquery.dataTables.min.js')
-    script(type='text/javascript' src='/js/bootstrap.js')
+    script(type='text/javascript' src='https://code.jquery.com/jquery-1.10.2.js')
+    script(type='text/javascript' src='https://cdn.datatables.net/1.10.2/js/jquery.dataTables.js')
+    script(type='text/javascript' src='https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js')
+    script(type='text/javascript' src='https://cdn.datatables.net/tabletools/2.2.2/js/dataTables.tableTools.js')
     link(rel='stylesheet' href='/css/demo_table.css')
     link(rel='stylesheet' href='/css/all.css')
-    link(rel='stylesheet' href='/css/bootstrap.css')
     link(rel='stylesheet' href='/css/flags.css')
+    link(rel='stylesheet' href='https://netdna.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css' type='text/css')
+    link(rel='stylesheet' href='https://cdn.datatables.net/1.10.2/css/jquery.dataTables.css')
+    link(rel='stylesheet' href='https://cdn.datatables.net/tabletools/2.2.2/css/dataTables.tableTools.css')
     link(rel='stylesheet' href='http://fonts.googleapis.com/css?family=Open+Sans:100,300,400,600,700'  type='text/css')
+
   body
     #nav.navbar.navbar-inverse
       .container
