Use full width on mobile and keep a fixed central bar for bigger screens.

--- a/src/main/webapp/WEB-INF/templates/layouts/default.jade
+++ b/src/main/webapp/WEB-INF/templates/layouts/default.jade
@@ -19,7 +19,7 @@ html
 
   body
     #nav.navbar.navbar-inverse
-      .container
+      .container.fluid
         .collapse.navbar-collapse
           ul(id="menu" class="nav navbar-nav")
             li
@@ -33,5 +33,5 @@ html
             li
               a(href="/videos") Videos
           /.clear
-    .container.jumbo
+    .container-fluid.jumbo
       != body
