--- a/src/main/webapp/css/all.css
+++ b/src/main/webapp/css/all.css
@@ -411,4 +411,14 @@ svg text {
   }
 }
 
+.fb-comments, .fb-comments iframe[style], .fb-like-box, .fb-like-box iframe[style] {width:  100% !important;display:block;z-index:2000;position:relative}
+.fb-comments span, .fb-comments iframe span[style], .fb-like-box span, .fb-like-box iframe  span[style] {width: 100% !important;display:block;z-index:2000;position:relative}
+iframe[id^='twitter-box']{ width:100% !important;}
 
+#fbBoxDiv, #twitterDiv {
+    float: left;
+}
+
+#fbBoxDiv {
+    margin: 0px 5px 5px 0px;
+}
